# hpc_project

./: .gitignore  Makefile  README.md  ddot.c  ddot.h  perf.c  perf.h  tp1.c  util.c  util.h
graph/: cumulative_bars.R  ddot_graph.R  dgemm_scalaire_graph.R  display.R  gen_graph.R  getrf_analysis.sh  make_data.sh  make_target_graph.sh
headers/: ddot.h  defines.h  my_blas.h  my_dgemm.h  my_dgetrf.h  my_gemm.h  my_getrf.h  my_lapack.h  my_lib.h  perf.h  util.h
src/: ddot.c  dgetrf_profiling.c  driver.c  getrf_split.c  my_blas.c  my_dgemm.c  my_dgetrf.c  my_gemm.c  my_getrf.c  my_lapack.c  perf.c  test_gemm.c  test_gemm_scalaire.c  test_getf2.c  test_getrf.c  test_perf.c  test_perf_gemms.c  test_perf_my_dgemm_scalaire.c  test_trsm.c  tp1.c  util.c
src/mylib/: my_blas.c  my_dgemm.c  my_dgetrf.c  my_lapack.c  my_pdgetrf.c
src/perf/: compare_bloc_tile.c  ddot.c  gemm_bloc_omp.c  gemm_cache.c  gemm_cache_bloc.c  gemm_scalaire_omp.c  gemm_tuilee_bloc_seq.c  getrf.c  getrf_all_cases.c  my_dgemm_scalaire.c  perf.c  scalability_gemm.c  scalability_getrf.c  strong_scalability.sh  trsm_omp.c
src/tst/: driver.c  gemm.c  gemm_scalaire.c  getf2.c  getrf.c  mpi_utils.c  pdgetrf.c  test_gemm.c  test_gemm_scalaire.c  test_getf2.c  test_getrf.c  test_perf.c  test_perf_ddot.c  test_perf_gemm_cache.c  test_perf_gemm_cache_bloc.c  test_perf_gemm_scalaire_omp.c  test_perf_getrf.c  test_perf_my_dgemm_scalaire.c  test_trsm.c  tp1.c  trsm.c
src/utilities/: mpi.c  perf.c  util.c
tp4/: README.md  make_data.sh
tp4/algonum/: starpu.c
tp4/algonum/include/: codelets.h
tp4/myblas/: CMakeLists.txt  codelet_dgetf2.c  codelet_dtrsm.c  mygemm.c  mygetrf.c  starpu_dgetrf.c
tp4/testings/: perf_dgemm.c
